--- a/config/database.yml
+++ b/config/database.yml
@@ -6,19 +6,17 @@ development:
   pool: 5
   timeout: 5000
 
-# Warning: The database defined as 'test' will be erased and
-# re-generated from your development database when you run 'rake'.
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql
-  database: lunarsway_test
-  host: 127.0.0.1
-  username: root
-  password: danielle
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
 
 production:
-  adapter: mysql
-  database: lunarsway_prod
-  host: 127.0.0.1
-  username: root
-  password: danielle
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
